@@ -1,5 +1,8 @@
 Release Notes
 
+* 3/18/2019
+  * removed high prio from ready tasks in getTasksTBP
+
 * 3/15/2019
   * to automatically fix empty memory requirements
 
